traversal.snake.Snake.scala.error
Compilation error:
Snake:9: warning: enclosing method positionFinale has result type Unit: return value discarded
  return bool
  ^Snake:14: error: value unary_! is not a member of Unit
  while (!positionFinale()) {
         ^